完善计分代码

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-9">
-        <router-outlet></router-outlet>
+    <div class="col-4">
+      <app-control-layout></app-control-layout>
+    </div>
+    <div class="col">
+      <app-video></app-video>
     </div>
     <div class="col-3">
-      <app-control-layout></app-control-layout>
+      <app-ranking></app-ranking>
     </div>
   </div>
 </div>
