--- a/src/app/control-layout/control-layout.component.html
+++ b/src/app/control-layout/control-layout.component.html
@@ -91,7 +91,7 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" form="rankForm" type="submit" (click)="save(form.value)"
-          data-dismiss="modal">保存</button>
+          >保存</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
       </div>
     </div>
