--- a/src/app/control-layout/control-layout.component.html
+++ b/src/app/control-layout/control-layout.component.html
@@ -11,7 +11,8 @@
     </div>
 
     <div class="progress mb-3">
-      <div class="progress-bar progress-bar-striped progress-bar-animated" [ngStyle]="{'width': processBarValue()}"></div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated" [class.bg-danger]="processBarValue()<0.4"
+        [ngStyle]="{'width': processBarValue()*100+'%'}"></div>
     </div>
   </div>
   <!-- <div class="form-group row">
@@ -40,31 +41,31 @@
   </div>
 
   <div class="form-group row">
-    <button class="btn btn-primary col-4 " (click)="newGame()">开始</button>
-    <button class="btn btn-default col-4 offset-4" (click)="pause()">{{pauseButtonText}}</button>
+    <button class="btn btn-primary col-3 " (click)="newGame()">开始</button>
+    <button class="btn btn-primary col-3 offset-1" (click)="computeScore()">计分</button>
+    <button class="btn btn-primary col-3 offset-1" (click)="newGroup()">下一组</button>
+
   </div>
   <div class="form-group row">
-    <button class="btn btn-primary col-4" (click)="computeScore()">计分</button>
   </div>
   <div class="form-group row">
-    <button class="btn btn-primary col-4 " (click)="newGroup()">下一组</button>
-    <button class="btn btn-secondary col-4 offset-4" data-toggle="modal" data-target="#commitDialog">结束</button>
+      <button class="btn btn-default col-3" (click)="pause()">{{pauseButtonText}}</button>
+    <button class="btn btn-secondary col-3 offset-5" data-toggle="modal" data-target="#commitDialog">结束</button>
     <!-- <button class="btn btn-info col-4 offset-4" (click)="showRanking()">{{urlButtonText}}</button> -->
   </div>
 </div>
 
 <!-- <div id="three" class="mt-3 p-0"></div> -->
-<div class="mt-3 p-0" style="height: 340px;">
+<div class="mt-3 p-0" style="height: 450px;">
   <app-block-layout #blockLayout></app-block-layout>
 </div>
 
 <div class="mt-3">
   <h2>评分标准</h2>
-  <textarea name="" id="" cols="30" rows="10" style="width: 100%;height: 200px;" class="text" disabled>
-  （1）完成一个图案加10分。
-  （2）对于未完成的图案，根据正确摆放位置的积木个数计分，每个积木加2分。
-  （3）跳过一个图案扣2分。
-  （4）若中途停止比赛，则按当前已完成的图案进行计分。
+  <textarea name="" id="" cols="30" rows="10" style="width: 100%;height: 120px;" class="text" disabled>
+  （1）根据正确摆放位置的积木个数计分，每个积木加2分。
+  （2）完成一个图案加10分。
+  （3）若中途停止比赛，则按当前已完成的图案进行计分。
   </textarea>
 </div>
 <div id="commitDialog" class="modal" tabindex="-1" role="dialog">
@@ -90,8 +91,7 @@
       </form>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary" form="rankForm" type="submit" (click)="save(form.value)"
-          >保存</button>
+        <button type="button" class="btn btn-primary" form="rankForm" type="submit" (click)="save(form.value)">保存</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
       </div>
     </div>
