--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-4">
+    <div class="col-9">
       <app-control-layout></app-control-layout>
     </div>
-    <div class="col">
+    <!-- <div class="col">
       <app-video></app-video>
-    </div>
+    </div> -->
     <div class="col-3">
       <app-ranking></app-ranking>
     </div>
