--- a/src/app/control-layout/control-layout.component.html
+++ b/src/app/control-layout/control-layout.component.html
@@ -1,99 +1,113 @@
-<div class="m-3">
-  <div class="form-group row">
-    <label class="h3 col-4 align-self-center">总分</label>
-    <input type="number" class="h2 col-8 text-center form-control" [(ngModel)]="newScore">
-  </div>
-  <div class="row"></div>
-  <div>
-    <div class="row">
-      <label class="h4 col-5">倒计时：</label>
-      <label class="h4 text-danger col">{{remainTimeText()}}</label>
-    </div>
+<div class="row m-0 p-0" style="width: 100%;height: 100%;">
+  <div class="col-4">
+    <div class="m-3">
+      <!-- <div class="form-group row">
+        <label class="h3 col-4 align-self-center">总分</label>
+        <input type="number" class="h2 col-8 text-center form-control" [(ngModel)]="newScore">
+      </div> -->
+      <div class="row"></div>
+      <div>
+        <div class="row">
+          <label class="h4 col-5">倒计时：</label>
+          <label class="h4 text-danger col">{{remainTimeText()}}</label>
+        </div>
 
-    <div class="progress mb-3">
-      <div class="progress-bar progress-bar-striped progress-bar-animated" [class.bg-danger]="processBarValue()<0.4"
-        [ngStyle]="{'width': processBarValue()*100+'%'}"></div>
-    </div>
-  </div>
-  <!-- <div class="form-group row">
+        <div class="progress mb-3">
+          <div class="progress-bar progress-bar-striped progress-bar-animated" [class.bg-danger]="processBarValue()<0.4"
+            [ngStyle]="{'width': processBarValue()*100+'%'}"></div>
+        </div>
+      </div>
+      <!-- <div class="form-group row">
     <label class="col-4 col-form-label">正确个数</label>
     <input type="number" class="form-control-range col" min="0" max="4" value="0" [(ngModel)]="number">
   </div> -->
-  <div class="form-group">
-    <div class="btn-group btn-group-toggle row m-0" data-toggle="buttons" style="width: 100%;">
-      <div class="offset-1"></div>
-      <label class="btn btn-outline-success active col-2 " (click)='changeScore(0)'>
-        <input type="radio" name="score" id="score0" #score0 autocomplete="off" checked> 0
-      </label>
-      <label class="btn btn-outline-success  col-2" (click)='changeScore(1)'>
-        <input type="radio" name="score" id="score1" autocomplete="off"> 1
-      </label>
-      <label class="btn btn-outline-success  col-2" (click)='changeScore(2)'>
-        <input type="radio" name="score" id="score2" autocomplete="off"> 2
-      </label>
-      <label class="btn btn-outline-success  col-2" (click)='changeScore(3)'>
-        <input type="radio" name="score" id="score3" autocomplete="off"> 3
-      </label>
-      <label class="btn btn-outline-success  col-2" (click)='changeScore(4)'>
-        <input type="radio" name="score" id="score4" autocomplete="off"> 4
-      </label>
-    </div>
-  </div>
+      <!-- <div class="form-group">
+        <div class="btn-group btn-group-toggle row m-0" data-toggle="buttons" style="width: 100%;">
+          <div class="offset-1"></div>
+          <label class="btn btn-outline-success active col-2 " (click)='changeScore(0)'>
+            <input type="radio" name="score" id="score0" #score0 autocomplete="off" checked> 0
+          </label>
+          <label class="btn btn-outline-success  col-2" (click)='changeScore(1)'>
+            <input type="radio" name="score" id="score1" autocomplete="off"> 1
+          </label>
+          <label class="btn btn-outline-success  col-2" (click)='changeScore(2)'>
+            <input type="radio" name="score" id="score2" autocomplete="off"> 2
+          </label>
+          <label class="btn btn-outline-success  col-2" (click)='changeScore(3)'>
+            <input type="radio" name="score" id="score3" autocomplete="off"> 3
+          </label>
+          <label class="btn btn-outline-success  col-2" (click)='changeScore(4)'>
+            <input type="radio" name="score" id="score4" autocomplete="off"> 4
+          </label>
+        </div>
+      </div> -->
 
-  <div class="form-group row">
-    <button class="btn btn-primary col-3 " (click)="newGame()">开始</button>
-    <button class="btn btn-primary col-3 offset-1" (click)="computeScore()">计分</button>
-    <button class="btn btn-primary col-3 offset-1" (click)="newGroup()">下一组</button>
+      <div class="form-group row">
+        <button class="btn btn-primary col-3 " (click)="newGame()">开始</button>
+        <button class="btn btn-primary col-3 offset-1" (click)="computeScore()" hidden>计分</button>
+        <button class="btn btn-primary col-3 offset-5" (click)="newGroup()">下一组</button>
 
-  </div>
-  <div class="form-group row">
-  </div>
-  <div class="form-group row">
-      <button class="btn btn-default col-3" (click)="pause()">{{pauseButtonText}}</button>
-    <button class="btn btn-secondary col-3 offset-5" data-toggle="modal" data-target="#commitDialog">结束</button>
-    <!-- <button class="btn btn-info col-4 offset-4" (click)="showRanking()">{{urlButtonText}}</button> -->
-  </div>
-</div>
-
-<!-- <div id="three" class="mt-3 p-0"></div> -->
-<div class="mt-3 p-0" style="height: 450px;">
-  <app-block-layout #blockLayout></app-block-layout>
-</div>
-
-<div class="mt-3">
-  <h2>评分标准</h2>
-  <textarea name="" id="" cols="30" rows="10" style="width: 100%;height: 120px;" class="text" disabled>
-  （1）根据正确摆放位置的积木个数计分，每个积木加2分。
-  （2）完成一个图案加10分。
-  （3）若中途停止比赛，则按当前已完成的图案进行计分。
-  </textarea>
-</div>
-<div id="commitDialog" class="modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">保存记录</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
       </div>
-      <form id="rankForm" action="" #form='ngForm'>
-        <div class="modal-body">
-          <div class="form-group row">
-            <label class="col-3 col-form-label">操作员</label>
-            <input type="text" class="form-control col-9" [(ngModel)]="operator" name="name" required="required">
+      <div class="form-group row">
+      </div>
+      <div class="form-group row">
+        <button class="btn btn-default col-3" (click)="pause()">{{pauseButtonText}}</button>
+        <button class="btn btn-secondary col-3 offset-5" (click)="stop()">结束</button>
+        <!-- <button class="btn btn-info col-4 offset-4" (click)="showRanking()">{{urlButtonText}}</button> -->
+      </div>
+    </div>
+
+
+    <div class="mt-5">
+      <h2>评分标准</h2>
+      <textarea name="" id="" cols="30" rows="10" style="width: 100%;height: 380px;;line-height: 200%" class="text text-primary h4" disabled>
+1、在规定时间内完成图案
+2、完成图案所需时间越短，排名越高
+3、开始挑战前，可选择图案
+4、若时间超过5分钟，按未完成计算
+      </textarea>
+      <!-- （1）根据正确摆放位置的积木个数计分，每个积木加2分。
+  （2）完成一个图案加10分。
+  （3）若中途停止比赛，则按当前已完成的图案进行计分。 -->
+    </div>
+    <div id="commitDialog" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">保存记录</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
           </div>
-          <div class="form-group row">
-            <label class="col-3 col-form-label">分数</label>
-            <input type="number" class="form-control col-9" [(ngModel)]="newScore" name="score" required>
+          <form id="rankForm" action="" #form='ngForm'>
+            <div class="modal-body">
+              <div class="form-group row" hidden>
+                <label class="col-3 col-form-label">操作员</label>
+                <input type="text" class="form-control col-9" [(ngModel)]="operator" name="name" required="required">
+              </div>
+              <div class="form-group row" hidden>
+                <label class="col-3 col-form-label">分数</label>
+                <input type="number" class="form-control col-9" [(ngModel)]="newScore" name="score" required>
+              </div>
+              <div class="form-group row">
+                <label class="col-3 col-form-label" style="font-size: 30px">耗时</label>
+                <input type="number" class="form-control col-9" [(ngModel)]="useTime" name="time" style="height: 60px;font-size: 2em;" required>
+              </div>
+            </div>
+          </form>
+
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" form="rankForm" type="submit" (click)="save(form.value)">保存</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
           </div>
         </div>
-      </form>
-
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" form="rankForm" type="submit" (click)="save(form.value)">保存</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">关闭</button>
       </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <!-- <div id="three" class="mt-3 p-0"></div> -->
+    <div class="mt-3 p-0" style="height: 650px;">
+      <app-block-layout #blockLayout></app-block-layout>
     </div>
   </div>
 </div>
